# cmake_docker_hello_world

./: CMakeLists.txt  Dockerfile  ReadMe.md
